--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.0.8",
+    "bootstrap": "^5.1.3",
+    "next": "^12.0.10",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@types/node": "^17.0.14",
+    "@types/react": "^17.0.39",
     "eslint": "8.7.0",
     "eslint-config-next": "12.0.8"
   }
